--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             padding-top: 230px; /* Give some space to the sections */
         }
 
+
+
     </style>
 </head>
 <body>
@@ -69,24 +71,33 @@
 <div id="doc2" class="yui-t7">
 	<div id="inner">
 	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Zheng Fan</h1>
-					<h2>PhD candidate in Economics</h2>
-				</div>
 
-				<div class="yui-u">
-                    <div class="contact-info">
-                        <h4>Contact me via email:</h4> 
-                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4><br>
-                 <!--//  <h4><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0" target="_blank">Download CV</a></h4>-->
-                        <h5><a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a></h5>
-					</div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+<div id="hd">
+  <div class="header-container">
 
+    <!-- Left: Name and Title -->
+<div class="header-left">
+  <h1><span style="font-weight: bold; color: #d63384;">Zheng</span> Fan</h1>
+  <h3>PhD Candidate in Economics</h3>
+</div>
+
+    <!-- Right: Contact Info -->
+    <div class="header-right">
+      <div class="contact-info">
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
+        </p>
+        <p>
+          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+        </p>
+      </div>
+    </div>
+
+  </div> <!--// .header-container -->
+</div> <!--// #hd -->
+     <!--//  <h4><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0" target="_blank">Download CV</a></h4>-->
+                        
 		<div id="bd">
 			<div id="yui-main">
 				<div class="yui-b">
@@ -95,7 +106,7 @@
     <!-- Sidebar -->
     <!-- Sidebar -->
 <div id="navbar">
-<a href="index.html">Home</a>
+<a href="index.html" class="active">Home</a>
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
 <a href="skills.html">Others</a>
@@ -103,22 +114,23 @@
 </div>
  
 
-				<div style="margin-bottom: 30px;" id="Welcome!">
-    <h2 style="color:#003366;">Welcome!</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p>Hi, welcome to my personal website! <br>
-    	 • I'm currently a PhD candidate in Economics at The University of Melbourne, Australia. <br>
-</p>
+<div style="margin-bottom: 30px;" id="Welcome">
+  <h3 style="color: #2c3e50;">Welcome</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
+       <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;"> Hi, welcome to my personal website!</strong>
+  </p>    
+  <p>• I'm currently a PhD candidate in Economics at The University of Melbourne, Australia.  
+  </p>
 </div>
 
-
 <div style="margin-bottom: 30px;" id="Research Interests">
-    <h2 style="color:#003366;">Research Interests</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p>
-        Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance
-    </p>
-  <p> 
+       <h3 style="color: #2c3e50;">Research Interests</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
+       <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;"> Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance</strong>
+  </p>    
+  <p>   
           • My primary research focuses on shrinkage priors and variable selections. <br>
           • I also investigate methods for high-dimensional data. 
     </p>
@@ -163,12 +175,15 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p> 
-                <p>Website update in March 2025</a></p>
+			<p>Zheng Fan &mdash;           <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a></p> 
+                <p>Website update in June 2025</a></p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
 
+<footer id="footer-bar">
+  <p>&copy; Copyright 2025 Zheng Fan. All rights reserved.</p>
+</footer>
 
 </div><!--// doc -->
 
