--- a/research.html
+++ b/research.html
@@ -70,20 +70,29 @@
 	<div id="inner">
 	
 		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Zheng Fan</h1>
-                    <h2>PhD candidate in Economics</h2>
-				</div>
+  <div class="header-container">
 
-				<div class="yui-u">
-                    <div class="contact-info">
-                        <h4>Contact me via email:</h4> 
-                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4>
-                    </div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+    <!-- Left: Name and Title -->
+<div class="header-left">
+  <h1><span style="font-weight: bold; color: #d63384;">Zheng</span> Fan</h1>
+  <h3>PhD Candidate in Economics</h3>
+</div>
+
+    <!-- Right: Contact Info -->
+    <div class="header-right">
+      <div class="contact-info">
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
+        </p>
+        <p>
+          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+        </p>
+      </div>
+    </div>
+
+  </div> <!--// .header-container -->
+</div> <!--// #hd -->
 
 		<div id="bd">
 			<div id="yui-main">
@@ -94,48 +103,65 @@
     <!-- Sidebar -->
 <div id="navbar">
 <a href="index.html">Home</a>
-<a href="research.html">Research</a>
+<a href="research.html" class="active">Research</a>
 <a href="teaching.html">Teaching</a>
 <a href="skills.html">Others</a>
          <!-- Add more links as needed -->
 </div>
  
  
-  
+  <div style="margin-bottom: 30px;" id="Research and Working Papers">
+  <h3 style="color: #2c3e50;">Research and Working Papers</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
 
-<div style="margin-bottom: 30px;" id="Research and Working Papers">
-    <h2 style="color:#003366;">Working Papers and Research Experience</h2>
-    <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
+  <p style="margin: 0 0 8px 0;">
+     <strong style="color: #d63384;">Consolidating Dynamic Shrinkage and Selection with an application to Exchange Rate Forecasting (Working)</strong>
+  </p>
     <div>
-        <h3>Consolidating Dynamic Shrinkage and Selection with an application to Exchange Rate Forecasting (Working)</h3>
-        <p><em>Abstract:</em> We propose a novel Bayesian methodology to consolidate dynamic sparsity and shrinkage to a unified coherent framework. It combines stochastic variable selection and dynamic shrinkage process in multiple Markov switching processes. The former serves as a dynamic sparsity mechanism by zeroing out model parameters. The latter allows for model parameters to change flexibly or be stable for some time. Our new method achieves a very flexible model dynamics that accommodate zero coefficients, graduation, and sudden structural change in a time-varying and data-driven fashion. Simulation and an application to exchange rate forecasting show the usefulness of this new approach.</p>
+         <p><em>Abstract:</em> We propose a novel Bayesian methodology to consolidate dynamic sparsity and shrinkage to a unified coherent framework. It combines stochastic variable selection and dynamic shrinkage process in multiple Markov switching processes. The former serves as a dynamic sparsity mechanism by zeroing out model parameters. The latter allows for model parameters to change flexibly or be stable for some time. Our new method achieves a very flexible model dynamics that accommodate zero coefficients, graduation, and sudden structural change in a time-varying and data-driven fashion. Simulation and an application to exchange rate forecasting show the usefulness of this new approach.</p>
     </div>
 
+  <p style="margin: 0 0 8px 0;">
+     <strong style="color: #d63384;">A Hierarchical Markov-switching Model for Bull and Bear Markets (Dissertation: Chap 1. Working)</strong>
+  </p>
     <div>
-        <h3>A Hierarchical Markov-switching Model for Bull and Bear Markets (Dissertation: Chap 1. Working)</h3>
+    
         <p>The first paper integrates the hierarchical Markov-switching model with model-based clustering to address high-dimensional data challenges, aiming to identify bull and bear markets. This approach enhances both identification and forecasting performance.</p>
-    </div>
-
-    <div>
-        <h3>Meta-Analysis with a General Genetic Model (Summer vacation program, 2019)</h3>
-        <p>Assessing the effect of the ACTN3 gene on athletic performance. Developing a widely applicable general model for studying different genetic effects. The poster can be viewed <a href="https://www.dropbox.com/scl/fi/pet2wde454ogcvdiyjpfb/ZhengFan_Poster_Meta_analysis.pdf?rlkey=1n0ow25yqnae992b8m7dhs103&st=idr79p1o&dl=0" target="_blank">HERE</a>.</p>
-    </div>
-
-    <div>
-        <h3>Global News vs. Local News with Multi-homing Consumers (Honours thesis, 2018)</h3>
-        <p>Extending a demographic model initiated by Salop generates some suggestive theoretical results.</p>
     </div>
 </div>
 
- 
- <div style="margin-bottom: 30px;" id = "Conference and Seminar Presentations">
-    <h2 style="color:#003366;">Conference and Seminar Presentations</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p> • 18th International Joint Conference on Computational and Financial Econometrics and Computational and Methodological Statistics (CFE-CMS2024), King's College London, 2024</p>
-    <p> • Econometric Society Australasia Meeting (ESAM), Monash University, Melbourne, 2024</p>
-    <p> • 6th Time Series and Forecasting Symposium, University of Sydney, 2024</p>
-    <p> • Melbourne Metrics Workshop, The University of Melbourne, 2024</p>
-    <p> • 2024 FBE Celebrating Graduate Research, The University of Melbourne, 2024</p>
+
+
+  <div style="margin-bottom: 30px;" id="Other Research Experience">
+  <h3 style="color: #2c3e50;">Other Research Experience</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
+
+  <p style="margin: 0 0 8px 0;">
+  <p style="margin: 0 0 8px 0;">
+     <strong style="color: #d63384;">Meta-Analysis with a General Genetic Model (Summer vacation program, 2019)</strong>
+  </p>
+    <div>
+         <p>Assessing the effect of the ACTN3 gene on athletic performance. Developing a widely applicable general model for studying different genetic effects. The poster can be viewed <a href="https://www.dropbox.com/scl/fi/pet2wde454ogcvdiyjpfb/ZhengFan_Poster_Meta_analysis.pdf?rlkey=1n0ow25yqnae992b8m7dhs103&st=idr79p1o&dl=0" target="_blank">HERE</a>.</p>
+    </div>
+  <p style="margin: 0 0 8px 0;">
+     <strong style="color: #d63384;">Global News vs. Local News with Multi-homing Consumers (Honours thesis, 2018)</strong>
+  </p>
+    <div>
+         <p>Extending a demographic model initiated by Salop generates some suggestive theoretical results.</p>
+    </div>
+</div>
+
+<div style="margin-bottom: 30px;" id="conference-presentations">
+  <h3 style="color: #2c3e50;">Conference and Seminar Presentations</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 6px 0;">
+
+  <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
+    <p>– 18th CFE-CMS 2024, King's College London, 2024</p>
+    <p>– Econometric Society Australasia Meeting (ESAM), Monash University, Melbourne, 2024</p>
+    <p>– (Poster) 6th Time Series and Forecasting Symposium, University of Sydney, 2024</p>
+    <p>– Melbourne Metrics Workshop, The University of Melbourne, 2024</p>
+    <p>– (Poster) 2024 FBE Celebrating Graduate Research, The University of Melbourne, 2024</p>
+  </ul>
 </div>
 
 
@@ -145,13 +171,16 @@
 			</div><!--// yui-main -->
 		</div><!--// bd -->
 
-		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p>
-		</div><!--// footer -->
+        <div id="ft">
+            <p>Zheng Fan &mdash;           <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a></p> 
+                <p>Website update in June 2025</a></p>
+        </div><!--// footer -->
 
 	</div><!-- // inner -->
 
-
+<footer id="footer-bar">
+  <p>&copy; Copyright 2025 Zheng Fan. All rights reserved.</p>
+</footer>
 </div><!--// doc -->
 
 
