--- a/skills.html
+++ b/skills.html
@@ -69,21 +69,30 @@
 <div id="doc2" class="yui-t7">
 	<div id="inner">
 	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Zheng Fan</h1>
-                    <h2>PhD candidate in Economics</h2>
-				</div>
+<div id="hd">
+  <div class="header-container">
 
-				<div class="yui-u">
-                    <div class="contact-info">
-                        <h4>Contact me via email:</h4> 
-                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4>
-                    </div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+    <!-- Left: Name and Title -->
+<div class="header-left">
+  <h1><span style="font-weight: bold; color: #d63384;">Zheng</span> Fan</h1>
+  <h3>PhD Candidate in Economics</h3>
+</div>
+
+    <!-- Right: Contact Info -->
+    <div class="header-right">
+      <div class="contact-info">
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
+        </p>
+        <p>
+          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+        </p>
+      </div>
+    </div>
+
+  </div> <!--// .header-container -->
+</div> <!--// #hd -->
 
 		<div id="bd">
 			<div id="yui-main">
@@ -95,29 +104,38 @@
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
-<a href="skills.html">Others</a>
+<a href="skills.html" class="active">Others</a>
          <!-- Add more links as needed -->
 </div>
  
  
 <div style="margin-bottom: 30px;" id="Skills">
-    <h2 style="color:#003366;">Skills</h2>
-    <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
+  <h3 style="color: #2c3e50;">Skills</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
 
-    <h3>Programming</h3>
-    <p>
-         • <strong>Specialized in:</strong> Matlab, Sparton (cloud parallel computing), LaTeX, HTML (Markdown).<br>
-         • <strong>Proficient in:</strong> R, Stan, EViews, Mathematica, Git.<br>
-         • <strong>Familiar with:</strong> Stata, Python (for teaching), Lightroom, ArcGIS.
-    </p>
+  <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;">• Programming</strong>
+  </p>
+  <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
+    <p>– <strong>Specialized in:</strong> Matlab, Sparton (cloud parallel computing), LaTeX, HTML (Markdown)</p>
+    <p>– <strong>Proficient in:</strong> R, Stan, EViews, Mathematica, Git</p>
+    <p>– <strong>Familiar with:</strong> Stata, Python (for teaching), Lightroom, ArcGIS</p>
+  </ul>
 
-        <h3>Languages</h3>
-    <p> • English (fluent), Mandarin (native)</p>
+  <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;">• Languages</strong>
+  </p>
+ <p>
+     English (fluent), Mandarin (native) 
+  </p>
 
-       <h3>Hobbies</h3>
-    <p> • Coding, Tech gears, Gaming, Badminton, Hiking, many others.</p>
-
+  <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;">• Hobbies</strong>
+  </p>
+   <p>  Coding, Tech gears, Gaming, Badminton, Hiking, Many others</li>
+   </p>
 </div>
+
  
 
  <!--
@@ -155,12 +173,15 @@
 			</div><!--// yui-main -->
 		</div><!--// bd -->
 
-		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p>
-		</div><!--// footer -->
+        <div id="ft">
+            <p>Zheng Fan &mdash;           <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a></p> 
+                <p>Website update in June 2025</a></p>
+        </div><!--// footer -->
 
 	</div><!-- // inner -->
-
+<footer id="footer-bar">
+  <p>&copy; Copyright 2025 Zheng Fan. All rights reserved.</p>
+</footer>
 
 </div><!--// doc -->
 
