--- a/teaching.html
+++ b/teaching.html
@@ -69,21 +69,30 @@
 <div id="doc2" class="yui-t7">
 	<div id="inner">
 	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Zheng Fan</h1>
-                    <h2>PhD candidate in Economics</h2>
-				</div>
+	<div id="hd">
+  <div class="header-container">
 
-				<div class="yui-u">
-					<div class="contact-info">
-                        <h4>Contact me via email:</h4> 
-						<h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4>
-					</div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+    <!-- Left: Name and Title -->
+<div class="header-left">
+  <h1><span style="font-weight: bold; color: #d63384;">Zheng</span> Fan</h1>
+  <h3>PhD Candidate in Economics</h3>
+</div>
+
+    <!-- Right: Contact Info -->
+    <div class="header-right">
+      <div class="contact-info">
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
+        </p>
+        <p>
+          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+        </p>
+      </div>
+    </div>
+
+  </div> <!--// .header-container -->
+</div> <!--// #hd -->
 
 		<div id="bd">
 			<div id="yui-main">
@@ -93,45 +102,83 @@
 <div id="navbar">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
-<a href="teaching.html">Teaching</a>
+<a href="teaching.html" class="active">Teaching</a>
 <a href="skills.html">Others</a>
          <!-- Add more links as needed -->
 </div>
  
 
-	 
- <div style="margin-bottom: 30px;" id = "Academic and Teaching Experience">
-    <h2 style="color:#003366;">Teaching and Academic Services</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-        <h3>Department of Economics, The University of Melbourne </h3>
-    <p><strong style="color:BrickRed;">• Teaching Assistant (Tutor)</strong> (2019 - present):</p>
-     <p>You may find some of my teaching materials at github for the following subjects (click the year-semester for navigation):
-    </p>
-      <div style="margin-left: 10px;">
+<div style="margin-bottom: 30px;" id="academic-teaching">
+  <h3 style="color: #2c3e50;">Teaching and Academic Services</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 6px 0;">
 
-<h5>ECON10003: Introductory Macroeconomics (Undergraduate): 2019-S2; 2020-S1; 2021-S1; 2022-S1;</h5>
-<h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; <a href="https://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>;</h5>
-<h5>ECON20001: Intermediate Macroeconomics (Undergraduate): 2021-S2; <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>;</h5>
-<h5>ECON20003: Quantitative Methods 2 (Undergraduate): <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;</h5>
-<h5>ECOM20001: Econometrics 1 (Undergraduate): 2022-S1; <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;   <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>
-;   <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
-</h5>
-<h5>ECOM90025: Advanced Data Analysis (Graduate): <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>; <a href="https://github.com/zhengf1/2023-S2-ADA" target="_blank">2023-S2</a>;</h5>
+  <p style="color: #333; font-weight: bold; margin: 0 0 4px 0;">
+    Department of Economics, The University of Melbourne
+  </p>
+  <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;">• Teaching Assistant (Tutor)</strong> (2019 – present)
+  </p>
 
+  <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
+    <li>– <strong>ECON10003: Introductory Macroeconomics:</strong> 2019-S2; 2020-S1; 2021-S1; 2022-S1</li>
+    <li>– <strong>ECON10005: Quantitative Methods 1:</strong> 2021-S1; 2022-S1;
+      <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>;
+      <a href="https://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>
+    </li>
+    <li>– <strong>ECON20001: Intermediate Macroeconomics:</strong> 2021-S2;
+      <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>
+    </li>
+    <li>– <strong>ECON20003: Quantitative Methods 2:</strong>
+      <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>
+    </li>
+    <li>– <strong>ECOM20001: Econometrics 1:</strong> 2022-S1;
+      <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;
+      <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>;
+      <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
+    </li>
+    <li>– <strong>ECOM90025: Advanced Data Analysis:</strong>
+      <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>;
+      <a href="https://github.com/zhengf1/2023-S2-ADA" target="_blank">2023-S2</a>
+    </li>
 
-  </div>
+  </ul>
 
-
-    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2021 - present</p>
-    
-            <h3>Melbourne Institute of Applied Economic and Social Research, The University of Melbourne</h3>
-    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2019</p>
-    
-                <h3>Ormond College, The University of Melbourne</h3>
-    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for ECOM30002: Econometrics 2, 2019</p>
+  <li style="margin: 0 0 -10px 0;">
+    You may find some of my teaching materials on GitHub for these subjects 
+    (click the year-semester for navigation)
+  </li>
 </div>
 
+  <p style="color: #333; font-weight: bold; color: #333;; margin: 0 0 4px 0;">
+    Melbourne Business School, The University of Melbourne
+  </p>
+  <p style="margin: 0 0 12px 0;">
+    <strong style="color: #d63384;">• Online Tutor (TA)</strong> (May - June 2025)
+  </p>
+
+  <p style="color: #333; font-weight: bold; color: #333;; margin: 0 0 4px 0;">
+    Department of Economics, The University of Melbourne
+  </p>
+  <p style="margin: 0 0 12px 0;">
+    <strong style="color: #d63384;">• Research Assistant (RA)</strong> (2021 – present)
+  </p>
+
+  <p style="color: #333; font-weight: bold; color: #333;; margin: 0 0 4px 0;">
+    Melbourne Institute of Applied Economic and Social Research, The University of Melbourne
+  </p>
+  <p style="margin: 0 0 12px 0;">
+    <strong style="color: #d63384;">• Research Assistant (RA)</strong> (2019)
+  </p>
  
+ <p style="color: #333; font-weight: bold; color: #333;; margin: 0 0 4px 0;">
+   Ormond College, The University of Melbourne
+  </p>
+ 
+  <p style="margin: 0 0 12px 0;">
+    <strong style="color: #d63384;">• Academic Tutor</strong> for <em>ECOM30002: Econometrics 2</em> (2019)
+  </p>
+ 
+</div>
 
  <!--
     <div style="margin-bottom: 30px;">
@@ -168,13 +215,16 @@
 			</div><!--// yui-main -->
 		</div><!--// bd -->
 
-		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p>
-		</div><!--// footer -->
+        <div id="ft">
+            <p>Zheng Fan &mdash;           <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a></p> 
+                <p>Website update in June 2025</a></p>
+        </div><!--// footer -->
 
 	</div><!-- // inner -->
 
-
+<footer id="footer-bar">
+  <p>&copy; Copyright 2025 Zheng Fan. All rights reserved.</p>
+</footer>
 </div><!--// doc -->
 
 
