--- a/skills.html
+++ b/skills.html
@@ -117,7 +117,7 @@
     <strong style="color: #d63384;">• Programming</strong>
   </p>
   <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
-    <p>– <strong>Specialized in:</strong> Matlab, Sparton (cloud parallel computing), LaTeX, HTML (Markdown)</p>
+    <p>– <strong>Specialized in:</strong> Matlab, Spartan (cloud parallel computing), LaTeX, HTML (Markdown)</p>
     <p>– <strong>Proficient in:</strong> R, Stan, EViews, Mathematica, Git</p>
     <p>– <strong>Familiar with:</strong> Stata, Python (for teaching), Lightroom, ArcGIS</p>
   </ul>
