--- a/skills.html
+++ b/skills.html
@@ -63,6 +63,12 @@
         }
 
     </style>
+ <!-- Font Awesome (for GitHub, Email, LinkedIn, ORCID icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Academicons (for Google Scholar) -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
+
 </head>
 <body>
 
@@ -78,13 +84,27 @@
   <h3>PhD Candidate in Economics</h3>
 </div>
 
-    <!-- Right: Contact Info -->
+  <!-- Right: Contact Info -->
     <div class="header-right">
       <div class="contact-info">
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
-        </p>
+<!-- Icon block aligned to the right -->
+<div style="display: flex; justify-content: flex-end; gap: 12px; align-items: center; margin-top: 18px;">
+  <a href="mailto:fan.z@unimelb.edu.au" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fas fa-envelope" style="font-size: 20px;" title="Email"></i>
+  </a>
+
+  <a href="https://github.com/zhengf1" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fab fa-github" style="font-size: 20px;" title="GitHub"></i>
+  </a>
+
+  <a href="https://www.linkedin.com/in/zheng-fan-11849836b" target="_blank" style="display: inline-flex; align-items: center; color: #0077b5;">
+    <i class="fab fa-linkedin" style="font-size: 20px;" title="LinkedIn"></i>
+  </a>
+
+  <a href="https://orcid.org/0000-0002-5203-4857" target="_blank" style="display: inline-flex; align-items: center; color: #a6ce39;">
+    <i class="fab fa-orcid" style="font-size: 20px;" title="ORCID"></i>
+  </a>
+</div>
         <p>
           <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
         </p>
@@ -137,36 +157,6 @@
 </div>
 
  
-
- <!--
-    <div style="margin-bottom: 30px;">
-        <h2 style="color:#003366;">Honours and Scholarships</h2>
-            <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-<p>
-            <a href="https://fbe.unimelb.edu.au/__data/assets/pdf_file/0006/4713963/FBE-GREG-Guidelines-for-Departments-and-GR-Candidates-July-2023.pdf" target="_blank">
-                FBE Graduate Research Enhancement Grant ($15,000)
-            </a> <span style="float:right;">2024 - present</span><br>
-            <a href="https://scholarships.unimelb.edu.au/awards/jim-perkins-phd-travelling-scholarship" target="_blank">
-                Jim Perkins PhD Travelling Scholarship ($10,000)
-            </a> <span style="float:right;">2023 - 2024</span><br>
-            <a href="https://science.unimelb.edu.au/mcds/education-and-training/for-students/doctoral-academy" target="_blank">
-                Melbourne Centre for Data Science Doctoral Academy ($5,000)
-            </a> <span style="float:right;">2022 - 2023</span><br>
-            <a href="https://scholarships.unimelb.edu.au/awards/graduate-research-scholarships" target="_blank">
-                Doctoral, Graduate Research Scholarships ($38,000 per year + benefits)
-            </a> <span style="float:right;">2020 - present</span><br>
-            <a href="https://fbe.unimelb.edu.au/scholarships/prizes/deans-honours-list" target="_blank">
-                2019 Dean's Honours List
-            </a> <span style="float:right;">2019</span><br>
-            <a href="https://ms.unimelb.edu.au/engage/vacation-scholarships" target="_blank">
-                Vacation Research Scholarship ($2,000)
-            </a> <span style="float:right;">2019</span><br>
-            <a href="https://scholarships.unimelb.edu.au/awards/melbourne-mobility-awards" target="_blank">
-                Melbourne Global Scholarship ($1,000 for LSE summer school)
-            </a> <span style="float:right;">2017</span>
-        </p>
-    </div>
- -->
  
 
 				</div><!--// .yui-b -->
