--- a/index.html
+++ b/index.html
@@ -62,11 +62,17 @@
             padding-top: 230px; /* Give some space to the sections */
         }
 
-
-
     </style>
+ 
+ <!-- Font Awesome (for GitHub, Email, LinkedIn, ORCID icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Academicons (for Google Scholar) -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
+
 </head>
 <body>
+ 
 
 <div id="doc2" class="yui-t7">
 	<div id="inner">
@@ -78,16 +84,34 @@
     <!-- Left: Name and Title -->
 <div class="header-left">
   <h1><span style="font-weight: bold; color: #d63384;">Zheng</span> Fan</h1>
-  <h3>PhD Candidate in Economics</h3>
+  <h3>PhD Candidate in Economics </h3>
+ </a>
 </div>
 
     <!-- Right: Contact Info -->
     <div class="header-right">
       <div class="contact-info">
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
-        </p>
+<!-- Icon block aligned to the right -->
+<div style="display: flex; justify-content: flex-end; gap: 12px; align-items: center; margin-top: 18px;">
+  <a href="mailto:fan.z@unimelb.edu.au" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fas fa-envelope" style="font-size: 20px;" title="Email"></i>
+  </a>
+
+  <a href="https://github.com/zhengf1" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fab fa-github" style="font-size: 20px;" title="GitHub"></i>
+  </a>
+
+  <a href="https://www.linkedin.com/in/zheng-fan-11849836b" target="_blank" style="display: inline-flex; align-items: center; color: #0077b5;">
+    <i class="fab fa-linkedin" style="font-size: 20px;" title="LinkedIn"></i>
+  </a>
+
+  <a href="https://orcid.org/0000-0002-5203-4857" target="_blank" style="display: inline-flex; align-items: center; color: #a6ce39;">
+    <i class="fab fa-orcid" style="font-size: 20px;" title="ORCID"></i>
+  </a>
+</div>
+
+
+   
         <p>
           <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
         </p>
@@ -96,6 +120,13 @@
 
   </div> <!--// .header-container -->
 </div> <!--// #hd -->
+
+
+ <!--//    <p>
+          <strong>Email:</strong>
+          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>      
+        </p> -->
+
      <!--//  <h4><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0" target="_blank">Download CV</a></h4>-->
                         
 		<div id="bd">
