--- a/research.html
+++ b/research.html
@@ -63,6 +63,12 @@
         }
 
     </style>
+ <!-- Font Awesome (for GitHub, Email, LinkedIn, ORCID icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Academicons (for Google Scholar) -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
+
 </head>
 <body>
 
@@ -78,13 +84,27 @@
   <h3>PhD Candidate in Economics</h3>
 </div>
 
-    <!-- Right: Contact Info -->
+ <!-- Right: Contact Info -->
     <div class="header-right">
       <div class="contact-info">
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a>
-        </p>
+<!-- Icon block aligned to the right -->
+<div style="display: flex; justify-content: flex-end; gap: 12px; align-items: center; margin-top: 18px;">
+  <a href="mailto:fan.z@unimelb.edu.au" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fas fa-envelope" style="font-size: 20px;" title="Email"></i>
+  </a>
+
+  <a href="https://github.com/zhengf1" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+    <i class="fab fa-github" style="font-size: 20px;" title="GitHub"></i>
+  </a>
+
+  <a href="https://www.linkedin.com/in/zheng-fan-11849836b" target="_blank" style="display: inline-flex; align-items: center; color: #0077b5;">
+    <i class="fab fa-linkedin" style="font-size: 20px;" title="LinkedIn"></i>
+  </a>
+
+  <a href="https://orcid.org/0000-0002-5203-4857" target="_blank" style="display: inline-flex; align-items: center; color: #a6ce39;">
+    <i class="fab fa-orcid" style="font-size: 20px;" title="ORCID"></i>
+  </a>
+</div>
         <p>
           <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
         </p>
