--- a/teaching.html
+++ b/teaching.html
@@ -153,7 +153,8 @@
     <li>– <strong>ECOM20001: Econometrics 1:</strong> 2022-S1;
       <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;
       <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>;
-      <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
+      <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>;
+      <a href="https://github.com/zhengf1/2025S2ECOM1" target="_blank">2025-S2</a>
     </li>
     <li>– <strong>ECOM90025: Advanced Data Analysis:</strong>
       <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>;
