--- a/research.html
+++ b/research.html
@@ -96,7 +96,10 @@
   <a href="https://github.com/zhengf1" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
     <i class="fab fa-github" style="font-size: 20px;" title="GitHub"></i>
   </a>
-
+  <a href="https://scholar.google.com/citations?user=kObE768AAAAJ" target="_blank" style="display: inline-flex; align-items: center; color: #4285F4;">
+    <i class="fas fa-graduation-cap" style="font-size: 20px;" title="Google Scholar"></i>
+  </a>
+  
   <a href="https://www.linkedin.com/in/zheng-fan-11849836b" target="_blank" style="display: inline-flex; align-items: center; color: #0077b5;">
     <i class="fab fa-linkedin" style="font-size: 20px;" title="LinkedIn"></i>
   </a>
@@ -135,10 +138,13 @@
   <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
 
   <p style="margin: 0 0 8px 0;">
-     <strong style="color: #d63384;">Consolidating Dynamic Shrinkage and Selection with an application to Exchange Rate Forecasting (Working)</strong>
+     <strong style="color: #d63384;">A New Perspective of the Meese-Rogoff Puzzle: Application of Sparse Dynamic Shrinkage</strong>
   </p>
     <div>
-         <p><em>Abstract:</em> We propose a novel Bayesian methodology to consolidate dynamic sparsity and shrinkage to a unified coherent framework. It combines stochastic variable selection and dynamic shrinkage process in multiple Markov switching processes. The former serves as a dynamic sparsity mechanism by zeroing out model parameters. The latter allows for model parameters to change flexibly or be stable for some time. Our new method achieves a very flexible model dynamics that accommodate zero coefficients, graduation, and sudden structural change in a time-varying and data-driven fashion. Simulation and an application to exchange rate forecasting show the usefulness of this new approach.</p>
+         <p>[
+      <a href="https://arxiv.org/abs/2507.14408">Working Paper</a> |  Code ]<br/>
+      <em>Abstract:</em> We propose the Markov Switching Dynamic Shrinkage process (MSDSP), nesting the Dynamic Shrinkage Process (DSP) of Kowal et al. (2019). We revisit the Meese-Rogoff puzzle (Meese and Rogoff, 1983a,b, 1988) by applying the MSDSP to the economic models deemed inferior to the random walk model for exchange rate predictions. The flexibility of the MSDSP model captures the possibility of zero coefficients (sparsity), constant coefficient (dynamic shrinkage), as well as sudden and gradual parameter movements (structural change) in the time-varying parameter model setting. We also apply MSDSP in the context of Bayesian predictive synthesis (BPS) (McAlinn and West, 2019), where dynamic combination schemes exploit the information from the alternative economic models. Our analysis provide a new perspective to the Meese-Rogoff puzzle, illustrating that the economic models, enhanced with the parameter flexibility of the MSDSP, produce predictive distributions that are superior to the random walk model, even when stochastic volatility is considered.
+</p>
     </div>
 
   <p style="margin: 0 0 8px 0;">
