--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
   <a href="https://github.com/zhengf1" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
     <i class="fab fa-github" style="font-size: 20px;" title="GitHub"></i>
   </a>
-
+  <a href="https://scholar.google.com/citations?user=kObE768AAAAJ" target="_blank" style="display: inline-flex; align-items: center; color: #4285F4;">
+    <i class="fas fa-graduation-cap" style="font-size: 20px;" title="Google Scholar"></i>
+  </a>
+  
   <a href="https://www.linkedin.com/in/zheng-fan-11849836b" target="_blank" style="display: inline-flex; align-items: center; color: #0077b5;">
     <i class="fab fa-linkedin" style="font-size: 20px;" title="LinkedIn"></i>
   </a>
