--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
   </p>
     <div>
          <p>[
-      <a href="https://arxiv.org/abs/2507.14408">Working Paper</a> |  Code ]<br/>
+      <a href="https://arxiv.org/abs/2507.14408" target="_blank">Working Paper</a> |  Code ]<br/>
       <em>Abstract:</em> We propose the Markov Switching Dynamic Shrinkage process (MSDSP), nesting the Dynamic Shrinkage Process (DSP) of Kowal et al. (2019). We revisit the Meese-Rogoff puzzle (Meese and Rogoff, 1983a,b, 1988) by applying the MSDSP to the economic models deemed inferior to the random walk model for exchange rate predictions. The flexibility of the MSDSP model captures the possibility of zero coefficients (sparsity), constant coefficient (dynamic shrinkage), as well as sudden and gradual parameter movements (structural change) in the time-varying parameter model setting. We also apply MSDSP in the context of Bayesian predictive synthesis (BPS) (McAlinn and West, 2019), where dynamic combination schemes exploit the information from the alternative economic models. Our analysis provide a new perspective to the Meese-Rogoff puzzle, illustrating that the economic models, enhanced with the parameter flexibility of the MSDSP, produce predictive distributions that are superior to the random walk model, even when stochastic volatility is considered.
 </p>
     </div>
